Deteccion: Apuntes completos, a lo mejor luego instalo Wazuh

--- a/HFC/DeteccionIntrusos/apuntes/HFC22_10_2024.md
+++ b/HFC/DeteccionIntrusos/apuntes/HFC22_10_2024.md
@@ -219,6 +219,10 @@ El objetivo principal es ==detectar comportamientos sospechosos o maliciosos en 
 
 ***MFA***: (*Multifactor Authentication*) Es un método de seguridad que ==requiere que los usuarios proporcionen 2 o más formas de verificación== antes de acceder al sistema, añadiendo capas adicionales de protección al sistema.
 
+***XDR***: (*Extended Detection and Response*) es un enfoque de ciberseguridad que busca ==integrar y correlacionar múltiples fuentes de seguridad==, para mejorar la detección y respuesta ante amenazas.
+
+A diferencia de otro tipo de herramientas que se enfocan en un solo vector de ataque (*endpoints*, *redes*, *aplicaciones web*), ***XDR*** busca ofrecer una visión amplia sobre todos ellos.
+
 # Enlaces
 
 [Siguiente ->](HFC23_10_2024.md)
