--- a/HFC/DeteccionIntrusos/apuntes/HFC25_10_2024.md
+++ b/HFC/DeteccionIntrusos/apuntes/HFC25_10_2024.md
@@ -11,7 +11,7 @@ Además de su capacidad de detección, ==*Snort* también puede ser configurado 
 
 Además al ser de código abierto, ofrece personalización y extensión según las necesidades específicas de la organización.
 
-A continuación detallaré los aspectos técnicos de ***Snort 3***,
+A continuación detallaré los aspectos técnicos de ***Snort 3***:
 
 ## Reglas de Snort
 
@@ -131,9 +131,9 @@ Dicha configuración se realiza en el archivo `snort.lua`, posiblemente ubicado 
 Es **importante definir en este archivo las variables `HOME_NET` y `EXTERNAL_NET`**, para su posible exportación a los archivos de reglas.
 
 ```lua
-----------------------------------------------------------------------
+----------------------------------------------------------
 -- 1. configure defaults
-----------------------------------------------------------------------
+----------------------------------------------------------
 
 --
 -- HOME_NET and EXTERNAL_NET must be set now
@@ -144,7 +144,7 @@ HOME_NET = '192.168.99.201' -- o 192.168.99/24 por ejemplo
 
 -- set up the external network addresses.
 -- (leave as "any" in most situations)
-EXTERNAL_NET = 'any'
+EXTERNAL_NET = '!$HOME_NET'
 
 -- Includes the snort defaults variables and terms
 include 'snort_defaults.lua'
@@ -171,9 +171,9 @@ Adicionalmente declaramos una *"tabla"* `variables` donde definiremos todas las 
 Es importante cuidar las comas y verificar la correcta sintaxis del archivo de configuración con el comando que mostré arriba.
 
 ```lua
-----------------------------------------------------------------------
+----------------------------------------------------------
 -- snort.lua
-----------------------------------------------------------------------
+----------------------------------------------------------
 
 -- ***********
 -- IPS options
@@ -222,9 +222,9 @@ Para lograr esto debemos adentrarnos una vez más en el archivo de configuració
 Por ejemplo, para generar *logs* tipo `alert_fast` en un archivo de texto:
 
 ```lua
----------------------------------------------------------------------
+----------------------------------------------------------
 -- snort.lua
----------------------------------------------------------------------
+----------------------------------------------------------
 
 -- *************
 -- event logging
@@ -261,6 +261,10 @@ Los siguientes modos de alerta son no pueden redirigirse a un archivo y son:
 Por ejemplo, con algo de investigación, hice esta regla para detectar una solictud ping *ICMP* a mi computadora.
 
 ```rules
+----------------------------------------------------------
+-- local.rules
+----------------------------------------------------------
+
 alert icmp $EXTERNAL_NET any -> 192.168.99.137 any
 (
 msg:"Ping a mi computadora";
@@ -273,6 +277,10 @@ sid:1000001;
 Y esta para buscar la palabra *"password"* en el contenido del paquete:
 
 ```rules
+----------------------------------------------------------
+-- local.rules
+----------------------------------------------------------
+
 alert tcp $HOME_NET any -> $EXTERNAL_NET any
 (
 msg:"Posible exfiltración";
