--- a/HFC/DeteccionIntrusos/apuntes/HFC28_10_2024.md
+++ b/HFC/DeteccionIntrusos/apuntes/HFC28_10_2024.md
@@ -43,6 +43,70 @@ Al aplicarlos se busca:
 
 > Otro enfoque común para restringir interacciones potencialmente dañinas en Internet es examinar los tipos MIME (*Content-Type*) de las peticiones *HTTP*.
 
+## Next Generation Firewall (NGFW)
+
+> Un *Next Generation Firewall* es un dispositivo diseñado para ofrecer protección más robusta frente a amenazas modernas y complejas, capaz de prevenir y detectar intrusiones, analizar la capa de aplicación y generar informes o registros avanzados.
+
+Ya hemos presentado antes a los *Perimeter SI Firewall*, sin embargo, ¿porqué distinguimos a los *NGFW* de estos?
+
+Es importante diferenciarlos porque ninguno es mejor que otro, si no que ambos se complementan y son necesarios para la seguridad de la organización.
+
+> Además, la diferencia principal contra un *Firewall Perimeter SI*, es que, como mencioné anteriormente, estos poseen visibilidad en la capa de aplicación, similar a un *WAF* solo que no se limitan únicamente a aplicaciones web.
+
+Algunos han considerado erróneamente que los *NIPS* son un paso evolutivo más allá de los *NIDS*, e incluso que estos últimos quedarían obsoletos.
+Sin embargo, los *NIPS* están mucho más alineados a los *NGFW*.
+
+Muchas organizaciones han integrado la funcionalidad de *NIPS* en sus dispositivos *NGFW* em lugar de requerir dispositivos *NIPS* independientes
+
+## DNS
+
+> A estas alturas ya tenemos una muy buena noción de lo que es un *DNS*, por lo que solo ahondaré en su importancia.
+
+Prácticamente todos los controles de red utilizan el *DNS* de alguna manera, es de los servicios más requeridos, y para los dispositivos de seguridad no es distinto.
+
+> ***La seguridad del DNS es primordial***
+
+El control hostil de los servidores o zonas *DNS* de una organización representa un riesgo enormemente potencial.
+
+Los *DNS* principalmente se dividen en 2 tipos:
+
+#### DNS autoritativo
+
+> Es un tipo de servidor *DNS* que tiene la autoridad para proporcionar respuestas definitivas sobre un dominio en específico.
+
+Es decir, tiene la información legítima y más actualizada sobre los registros *DNS* del dominio solicitado.
+
+Sabemos que existen múltiples servidores *DNS* en Internet, por lo que al realizar una consulta a nuestro servidor *DNS* más cercano, revisara el caché de sus consultas y de ser posible nos dará una respuesta inmediata, pero ***no autoritativa***.
+
+Se dice ***no autoritativa*** porque no posee de primera mano la respuesta, si no que es información que almacenó en algún momento por alguna consulta previa y que incluso obtuvo de otro *DNS* cercano, posiblemente, de forma ***no autoritativa***.
+
+#### DNS recursivo
+
+> Los *DNS* recursivos son los intermediarios entre los usuarios y los *DNS* autoritativos.
+
+En contraste con los autoritativos, son todos aquellos servidores que no poseen la información legítima y deben obtenerla de algun otro servidor *DNS*.
+
+Para evitar realizar múltiples consultas, almacenan muchas respuestas como caché, para comodidad de sus usuarios y de otros *DNS* que puedan requerir esa misma información.
+
+---
+
+Enfocandonos en la ciberseguridad, el *malware*, como la mayoría del *software* de red, utiliza *DNS* para resolver direcciones IP a nombres de dominios y viceversa.
+
+Tomando eso en cuenta, se debe monitorear lo siguiente:
+
+- Solicitudes a miles de *hosts* o subdominios en un solo dominio.
+- Consultas *DNS* grandes con alta entropía
+- Respuestas grandes de registros *TXT*
+- Intentos de resolver registros *NULL*
+- Altos volúmenes de fallos en la resolución *DNS*
+- Solicitudes a dominios jóvenes (registrados recientemente)
+
+**DNS, el canal ideal de C2 (Comando y control)**
+
+- Subredes internas bloqueadas "sin acceso a internet" a menudo permiten la resolución *DNS* pública. Esto resulta en una fomra viable de salida para un atacante.
+
+- Los túneles *DNS* son muchos más dificiles de mitigar a través de controles preventivos. Pues no es un uso esperable o convencional de estos servidores.
+
 # Enlaces
 
 [<- Anterior](HFC25_10_2024.md) | [Siguiente ->](HFC29_10_2024.md)
