--- a/HFC/DeteccionIntrusos/apuntes/HFC29_10_2024.md
+++ b/HFC/DeteccionIntrusos/apuntes/HFC29_10_2024.md
@@ -1,70 +1,4 @@
 [<- Índice](../DeteccionIntrusos.md)
-# Más herramientas  
-
-## Next Generation Firewall (NGFW)
-
-> Un *Next Generation Firewall* es un dispositivo diseñado para ofrecer protección más robusta frente a amenazas modernas y complejas, cappaz de prevenir y detectar intrusiones, analizar la capa de aplicación y generar informes o registros avanzados.
-
-Ya hemos presentado antes a los *Perimeter SI Firewall*, sin embargo, ¿porqué distinguimos a los *NGFW* de estos?
-
-Es importante diferenciarlos porque ninguno es mejor que otro, si no que ambos se complementan y son necesarios para la seguridad de la organización.
-
-> Además, la diferencia principal contra un *Firewall Perimeter SI*, es que, como mencioné anteriormente, estos poseen visibilidad en la capa de aplicación, similar a un *WAF* solo que no se limitan únicamente a aplicaciones web.
-
-Algunos han considerado erróneamente que los *NIPS* son un paso evolutivo más allá de los *NIDS*, e incluso que estos últimos quedarían obsoletos.
-Sin embargo, los *NIPS* están mucho más alineados a los *NGFW*.
-
-Muchas organizaciones han integrado la funcionalidad de *NIPS* en sus dispositivos *NGFW* em lugar de requerir dispositivos *NIPS* independientes
-
-## DNS
-
-> A estas alturas ya tenemos una muy buena noción de lo que es un *DNS*, por lo que solo ahondaré en su importancia.
-
-Prácticamente todos los controles de red utilizan el *DNS* de alguna manera, es de los servicios más requeridos, y para los dispositivos de seguridad no es distinto.
-
-> ***La seguridad del DNS es primordial***
-
-El control hostil de los servidores o zonas *DNS* de una organización representa un riesgo enormemente potencial.
-
-Los *DNS* principalmente se dividen en 2 tipos:
-
-#### DNS autoritativo
-
-> Es un tipo de servidor *DNS* que tiene la autoridad para proporcionar respuestas definitivas sobre un dominio en específico.
-
-Es decir, tiene la información legítima y más actualizada sobre los registros *DNS* del dominio solicitado.
-
-Sabemos que existen múltiples servidores *DNS* en Internet, por lo que al realizar una consulta a nuestro servidor *DNS* más cercano, revisara el caché de sus consultas y de ser posible nos dará una respuesta inmediata, pero ***no autoritativa***.
-
-Se dice ***no autoritativa*** porque no posee de primera mano la respuesta, si no que es información que almacenó en algún momento por alguna consulta previa y que incluso obtuvo de otro *DNS* cercano, posiblemente, de forma ***no autoritativa***.
-
-#### DNS recursivo
-
-> Los *DNS* recursivos son los intermediarios entre los usuarios y los *DNS* autoritativos.
-
-En contraste con los autoritativos, son todos aquellos servidores que no poseen la información legítima y deben obtenerla de algun otro servidor *DNS*.
-
-Para evitar realizar múltiples consultas, almacenan muchas respuestas como caché, para comodidad de sus usuarios y de otros *DNS* que puedan requerir esa misma información.
-
----
-
-Enfocandonos en la ciberseguridad, el *malware*, como la mayoría del *software* de red, utiliza *DNS* para resolver direcciones IP a nombres de dominios y viceversa.
-
-Tomando eso en cuenta, se debe monitorear lo siguiente:
-
-- Solicitudes a miles de *hosts* o subdominios en un solo dominio.
-- Consultas *DNS* grandes con alta entropía
-- Respuestas grandes de registros *TXT*
-- Intentos de resolver registros *NULL*
-- Altos volúmenes de fallos en la resolución *DNS*
-- Solicitudes a dominios jóvenes (registrados recientemente)
-
-**DNS, el canal ideal de C2 (Comando y control)**
-
-- Subredes internas bloqueadas "sin acceso a internet" a menudo permiten la resolución *DNS* pública. Esto resulta en una fomra viable de salida para un atacante.
-
-- Los túneles *DNS* son muchos más dificiles de mitigar a través de controles preventivos. Pues no es un uso esperable o convencional de estos servidores.
-
 # Detección de Intrusos en Dispositivos Finales (Endpoints)
 
 Es un componente esencial de la ciberseguridad que se centra en monitorizar y proteger dispositivos finales como computadoras, laptops, servidores contra actividades maliciosas.
@@ -163,6 +97,55 @@ Son particularmente peligrosos, y necesarios de monitorear, privilegios como:
 - Cargar *drivers* al sistema
 - Apropiarse (designar como usuario propietario) de recursos
 - Restaurar archivos o directorios
+
+### Credenciales
+
+Al inicio del módulo, mencionamos que la mayoría de los ataques fueron por credenciales comprometidas.
+
+> Es precisamente porque los adversarios dan mucho valor al compromiso de credenciales, ya que facilitan la explotación y post-explotación del ataque.
+
+En especial las credenciales *Windows*, por la gran utilización de este sistema operativo, representan un grave peligro para la organización.
+
+#### Contraseñas
+
+La forma más básica y común de credenciales es simplemente un usuario y una contraseña, aun así, a estas alturas se ha demostrado que no son suficientes, por lo que se ha popularizado más la ==autenticación de doble factor==.
+
+> Aun con eso, las contraseñas seguiran siendo el método principal de autenticación por un largo tiempo.
+
+Por esto mismo debemos entender bien como funciona la autenticación *Windows*.
+
+#### Almacenamiento de contraseñas
+
+> *Windows* permite almacenar los hashes de contraseñas en múltiples lugares, pero el lugar principal de almacenado es la carpeta *SAM*:
+
+`C:\Windows\System32\config\SAM`
+
+- *SAM* solo incluye los *hashes* de cuentas locales del sistema.
+
+Los *hashes* de las demas cuentas del dominio residen en el *Active Directory*, principalmente en la ruta `C:\NTDS\Ntds.dit` de los controladores de dominio.
+
+### Análisis de cola larga (Long Tail)
+
+> Consiste en enfocar el análisis en los eventos con menos ocurrencias, permitiendo el análisis de muchos datos sin saturaciones.
+
+Esta forma de análisis funciona bien con:
+
+- *Logs* de eventos de *Windows*.
+- Instalaciones de *software*.
+- Llaves de registro de arranque (*Startup registry keys*): Permiten que *software* se ejecute al iniciar la computadora.
+- *Logs DNS*.
+
+Algunas de las llaves de registro de arranque más comúnes son:
+
+- `HKLM\Software\Microsoft\Windows\CurrentVersion\Run`
+- `HKLM\Software\Microsoft\Windows\CurrentVersion\RunOnce`
+- `HKCU\Software\Microsoft\Windows\CurrentVersion\Run`
+- `HKCU\Software\Microsoft\Windows\CurrentVersion\RunOnce`
+
+Y unas que siempre se olvidan:
+
+- `HKLM\Software\Wow6432node\Microsoft\Windows\CurrentVersion\Run`
+- `HKLM\Software\Wow6432node\Microsoft\Windows\CurrentVersion\RunOnce`
 
 # Enlaces
 
