--- a/HFC/SeguridadPerimetral/apuntes/HFC31_10_2024.md
+++ b/HFC/SeguridadPerimetral/apuntes/HFC31_10_2024.md
@@ -1,23 +1,52 @@
 [<- Índice](../SeguridadPerimetral.md)
 # HoneyPots
 
-Recurso de seguridad cuyo valor radia en ser atacado
+***¿Qué es un honeypot?***
 
-- Honey Systems
-- Honey Services
-- Honey Tokens
+> Es un recurso de seguridad cuyo valor radia en ser reconocido, atacado o comprometido.
 
-Todos son
+Se dividen principalmente en 3 tipos:
 
-- Engañosos
-- Localizables
-- Interactivos
-- Monitoreados
+##### Honey Systems
 
-Investigación
-Agotar recursos
-Detección de Intrusos
+Imitan un sistema operativo completo además de sus servicios.
+##### Honey Services
+
+Imitan *software* o funciones de un protocolo.
+##### Honey Tokens
+
+Imitan información valiosa como credenciales, información del sistema, datos de una base de datos, etc.
+
+### Características
+
+Todos los *Honeypots* son:
+
+***Engañosos***: Pretenden ser algo que no son
+
+***Localizables***: Son colocados en la red donde es posible que un atacante los encuentre.
+
+***Interactivos***: El *honeypot* responde a los estímulos que recibe, ya sea simple o más sofisticadamente.
+
+***Monitoreados***: Cualquier interacción con el *honeypot* es registrada y debe lanzar una alerta.
+
+### Objetivos de un *Honeypot*
+
+***Investigación***: Se busca aprender sobre las técnicas y procedimientos de los atacantes.
+
+***Agotar recursos***: Se busca desperdiciar el tiempo y los esfuerzos del atacante en lo que se realiza la detección.
+
+***Detección de Intrusos***: Se busca alertar acerca de una tacante presente en la red, pues nada legítimo debería estar interactuando con el *Honeypot*.
+
+> *"Si el canario de la mina muere, significa peligro"*
 
 ### Detección de Intrusos
 
-*IDH*: *Intrusion Detection Honeypot*
+Comúnmente llamados *Intrusion Detection Honeypot* (*IDH*), siguen la metodología de engaño ***Ve - Piensa - Actua***.
+
+- ***Ve***: El atacante debe poder ver y alcanzar el *Honeypot*.
+- ***Piensa***: El atacante debe pensar que el *Honeypot* es valioso de alguna forma, lo suficiente para invertir su tiempo en interactuar con él.
+- ***Actua***: Finalmente, el atacante debe interactuar con el *Honeypot*, generando la alerta.
+
+El paso crucial radica al final, ==el atacante debe actuar, no solo pensar==.
+
+# Enlaces
