Ligeras correcciones en conceptos

--- a/HFC/DeteccionIntrusos/apuntes/HFC25_10_2024.md
+++ b/HFC/DeteccionIntrusos/apuntes/HFC25_10_2024.md
@@ -40,20 +40,20 @@ alert tcp $EXTERNAL_NET any -> $HOME_NET any
 Los datos que contiene son:
 
 1. Acción de la regla
-2. Protocolo (Ahora en *Snort* 3 se permiten protocolos de capa de aplicación)
+2. Protocolo (Ahora en *Snort* 3 se permiten protocolos de capa de aplicación, además de los tradicionales)
 3. Dirección IP origen
 4. Puerto origen
-5. Dirección: `->` (Puede ser `<-` p `<>` también)
+5. Dirección: `->` (Puede ser `<>` también para comunicaciones en cualquier sentido)
 6. Dirección IP destino
 7. Puerto destino
 
 #### Acciones de la regla
 
 - ***alert***: Genera una alerta y después registra el paquete.
-- ***block***: Bloquea el paquete actual y todos los subsecuentes.
-- ***drop***: "Suelta" el paquete
+- ***block***: Bloquea el paquete que detone la regla ==**y todos los subsecuentes**==.
+- ***drop***: Bloquea unicamente el paquete que la active.
 - ***log***: Únicamente registra el paquete.
-- ***pass***: Ignora el paquete.
+- ***pass***: Hace que las demás reglas ignoren el paquete.
 
 ## Uso
 
