Detección de Intrusos: Wireshark y TShark

--- a/HFC/DeteccionIntrusos/apuntes/HFC24_10_2024.md
+++ b/HFC/DeteccionIntrusos/apuntes/HFC24_10_2024.md
@@ -70,6 +70,70 @@ Utiliza técnicas como inspección profunda de paquetes, análisis de anomalías
 
 En este curso nos enfocamos principalmente en ***Snort*** como *NIPS* y como definir reglas en este.
 
+---
+## Wireshark
+
+> Es una herramienta muy poderosa utilizada para analizar paquetes y protocolos de red. Permite capturar y analizar la red en tiempo real a un nivel detallado.
+
+En este curso se usará para analizar algunos archivos de capturas `.pcap`, `pcapng`. `.cap`, o cualquier similar.
+
+#### Estadísticas
+
+> Nos interesa particularmente la sección de estadísticas de *Wireshark*.
+
+![wireshark-introduction.png](imagenes/wireshark-introduction.png)
+
+En la subsección ***Propiedades del archivo*** podemos encontrar algunos metadatos referentes al archivo de captura, como el número de paquetes, con que interfaz de red y sistema operativo se capturo, hashes de la captura, etc.
+
+![wireshark-statistics.png](imagenes/wireshark-statistics.png)
+
+Otras secciones importantes son:
+
+- ***Ressolved Hosts***: Donde se resuelven (o al menos se intentan resolver) las direcciónes *IP* y *MAC* a nombres de dominio y de *host* respectivamente.
+
+- ***Protocol Hierarchy***: Se despliegan los protocolos utilizados en los paquetes de forma *"anidada"*, indicando bajo que protocolos se enviaron ciertos protocolos.
+
+- ***Conversations***: Flujos o conversaciones presentes en la captura, junto con estadísticas relevantes a ellos.
+
+- ***Endpoints***: Dispositivos finales, usualmente representados por direcciones *IP*, presentes en la captura, además de estadísticas útiles para cada uno de ellos.
+
+---
+#### Filtros
+
+Además de estos datos estadísticos, podemos observar que *Wireshark* posee en su sección principal una barra de *"búsqueda"* donde ==podemos definir filtros para que muestre solo los paquetes que deseamos ver==.
+
+Por ejemplo, si introducimos `icmp`, nos mostrará unicamente los paquetes que posean una capa o sección *ICMP*.
+
+Podemos filtrar paquetes que contengan una dirección *IP*, ya sea origen o destino con `ip.addr == *.*.*.*` o especificar si es una dirección destino u origen con `ip.src == *.*.*.*` o `ip.dst == *.*.*.*` .
+
+Existe una variedad de filtros útiles, por lo que *Wireshark* nos ofrece autocompletado para facilitarnos introducir el filtro que deseamos.
+
+## TShark
+
+> *TShark* es la versión en línea de comandos de *Wireshark* y posee todas las características relevantes de este.
+
+Puede ser utilizado para obtener datos de las capturas directamente en terminal y procesarlos por otros comandos a nuestro gusto.
+
+No daremos un uso profundo a esta herramienta pero las opciones más destacadas son:
+
+***Leer un archivo de captura***:
+
+```bash
+tshark -r captura.pcap
+```
+
+***Aplicar un filtro al archivo de captura***:
+
+```bash
+tshark -r captura.pcap -Y '[filtro]'
+```
+
+***Extraer un campo de todas las capturas mostradas***:
+
+```bash
+tshark -r captura.pcap -Y '[filtro]' -T fields -e '[campo]'
+```
+
 # Enlaces
 
 [<- Anterior](HFC23_10_2024.md) | [Siguiente ->](HFC25_10_2024.md)
