--- a/HFC/DeteccionIntrusos/apuntes/HFC25_10_2024.md
+++ b/HFC/DeteccionIntrusos/apuntes/HFC25_10_2024.md
@@ -201,7 +201,7 @@ ips =
 }
 ```
 
-## Alertas
+## Registro (logs)
 
 > Cuando **Snort** asocia un tráfico a una regla definida, genera un "evento"  que puede ser visualizado de distintas maneras.
 
