Seguridad Perimetral: Plantillas de Notas

--- a/HFC/SeguridadPerimetral/apuntes/HFC04_11_2024.md
+++ b/HFC/SeguridadPerimetral/apuntes/HFC04_11_2024.md
@@ -1,3 +1,4 @@
+[<- Índice](../SeguridadPerimetral.md)
 # Seguridad Perimetral
 
 > *"La seguridad se logra através de la apertura. Desarmar las cosas y jugar con ellas... exponiendo a las fallas de seguridad es lo que nos protege a todos nosotros"*
@@ -20,8 +21,74 @@ Los sistemas de monitoreo establecidos en esta zona no detectaran los ataques de
 
 ### Controles de red
 
+> Un ***control de red*** es cualquier mecanismo, sistema o conjunto de medidas utilizado para gestionar, supervisar y proteger el tráfico de una red.
+
+Por ejemplo, hemos discutido antes dispositivos útiles tanto para la detección como prevención de intrusos y ataques.
+
+Entre ellos destacamos 2 secciones:
+
+***Perimetro***:
+- *Firewall* / *Next Generation Firewall*
+- *Web Application Firewall (WAF)*
+- *IPS*
+
+***Interior***:
+- *DMZ*
+- *IDS*
+- *Honeypots*
+- *Anti-malware*
+- *SIEM*
+
+Es importante complementar el uso de todos estos controles, potenciando la defensa de la organización.
+
 > ***"Un solo control de seguridad no puede defender apropiadamente la red de una organización"***
 
 ## HTTPS
 
+> Recordemos que *HTTPS*, *HyperText Transfer Protocol Secure* es un protocolo de comunicación "segura" en Internet.
+
+Deriva del tradicional *HTTP*, solo que implementa el uso de **cifrado** y **certificados** para proteger la confidencialidad e integridad de los datos que se envían entre el usuario y el sitio *web*.
+
+#### Cifrado
+
+> *HTTPS* utiliza *TLS/SSL* para cifrar la información que se transmite hasta que llegue a su destinatario.
+
+#### Autenticación por certificados
+
+*HTTPS* apoya a la verificación de sitios *web*, asegurando que el usuario esté conectado al servidor correcto.
+
+> Esto se realiza mediante ***certíficados digitales*** de una ***autoridad de certificación*** (*CA*). Este certificado confirma que el sitio es auténtico y no una imitación.
+
 ### TLS/SSL
+
+*TLS* y *SSL* son protocolos de seguridad que se utilizan para proteger la transmisión de datos en *Internet*, particulamente en *HTTPS*.
+
+##### SSL (Secure Sockets Layer)
+
+> *SSL* fue el primer protocolo desarrollado para cifrar comunicación *web*.
+
+Creado por *Netscape* en los años 90, pasó por varias versiones. Sin embargo, estas versiones tenían algunas vulnerabilidades, lo que llevó al desarrollo de un protocolo más seguro.
+
+##### TLS (Transport Layer Security)
+
+> *TLS* es la evolución de *SSL* diseñado para mejorar la seguridad de este protocolo original.
+
+Aunque muchas personas siguen refiriendosé a él como *SSL*, este ya ha remplazado a su predecesor en casi todos los casos debido a sus mejoras en seguridad y rendimiento.
+
+## Conexión Segura
+
+Para que una sesión *HTTPS* segura tenga lugar, se realizan una serie de pasos preparativos para iniciar satisfactoriamente la sesión comúnmente conocidos como ***TLS Handshake***.
+
+1. Se realiza el **3-Way Handshake** entre el servidor y el cliente.
+
+2. El cliente muestra, entre otros datos, una lista de algoritmos de cifrado que el cliente puede soportar. Este paso es denominado ***Client Hello***.
+
+3. El servidor responde, entre otros datos, con el algoritmo de cifrado que desea utilizar para la comunicación. Este paso es denominado ***Server Hello***.
+
+4. En caso de una conexión autenticada, el servidor envía su certificado digital.
+
+5. Finalmente, por métodos que veremos más adeltante, el servidor y el cliente acuerdan la llave de cifrado y comienzan la comunicación cifrada.
+
+# Enlaces
+
+[<- Anterior](HFC31_10_2024.md) | [Siguiente ->](HFC05_11_2024.md)
