--- a/HFC/SeguridadPerimetral/apuntes/HFC31_10_2024.md
+++ b/HFC/SeguridadPerimetral/apuntes/HFC31_10_2024.md
@@ -17,6 +17,7 @@ Imitan *software* o funciones de un protocolo.
 
 Imitan información valiosa como credenciales, información del sistema, datos de una base de datos, etc.
 
+---
 ### Características
 
 Todos los *Honeypots* son:
@@ -39,6 +40,7 @@ Todos los *Honeypots* son:
 
 > *"Si el canario de la mina muere, significa peligro"*
 
+---
 ### Detección de Intrusos
 
 Comúnmente llamados *Intrusion Detection Honeypot* (*IDH*), siguen la metodología de engaño ***Ve - Piensa - Actua***.
@@ -50,3 +52,5 @@ Comúnmente llamados *Intrusion Detection Honeypot* (*IDH*), siguen la metodolog
 El paso crucial radica al final, ==el atacante debe actuar, no solo pensar==.
 
 # Enlaces
+
+[Siguiente ->](HFC04_11_2024.md)
