Inicio de mis notas de Pentest

--- a/HFC/DeteccionIntrusos/apuntes/HFC24_10_2024.md
+++ b/HFC/DeteccionIntrusos/apuntes/HFC24_10_2024.md
@@ -104,7 +104,7 @@ Además de estos datos estadísticos, podemos observar que *Wireshark* posee en 
 
 Por ejemplo, si introducimos `icmp`, nos mostrará unicamente los paquetes que posean una capa o sección *ICMP*.
 
-Podemos filtrar paquetes que contengan una dirección *IP*, ya sea origen o destino con `ip.addr == *.*.*.*` o especificar si es una dirección destino u origen con `ip.src == *.*.*.*` o `ip.dst == *.*.*.*` .
+Podemos filtrar paquetes que contengan una dirección *IP*, ya sea origen o destino con `ip.addr == *.*.*.*` o especificar si es una dirección destino u origen con `ip.src == *.*.*.*` o `ip.dst == *.*.*.*`
 
 Existe una variedad de filtros útiles, por lo que *Wireshark* nos ofrece autocompletado para facilitarnos introducir el filtro que deseamos.
 
